redo style on login page, use body classes iso html classes and id, add logo version when bg images enabled

--- a/templates/_base/layout_blank.html.twig
+++ b/templates/_base/layout_blank.html.twig
@@ -13,7 +13,7 @@
     {{ include('_partials/favicon.html.twig') }}
 </head>
 
-<body>
+<body{% if block('body_class') %} class="{% block body_class %}{% endblock %}"{% endif %}>
 
         {% block main %}
         {% endblock %}
