--- a/assets/scss/layout/_login.scss
+++ b/assets/scss/layout/_login.scss
@@ -1,10 +1,24 @@
-html#login {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(37, 86, 135, 0.5));
+.page--login {
 
-  &.with-background {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(37, 86, 135, 0.5)), url(https://source.unsplash.com/daily);
-    background-position: center;
-    background-size: cover;
+  > div {
+    max-width: 25rem;
+    margin: 0 auto;
+    padding: 2rem 1rem;
+    @include media-breakpoint-up(sm) {
+      padding-top: 4rem;
+    }
+    @include media-breakpoint-up(md) {
+      padding-top: 5rem;
+    }
+    @include media-breakpoint-up(lg) {
+      padding-top: 7rem;
+    }
+  }
+
+  h1 {
+    text-align: center;
+    margin: 2rem 0;
+    font-size: 1.25rem;
   }
 
   body {
@@ -14,18 +28,31 @@ html#login {
     align-items: center;
   }
 
-  .card {
-    width: 22rem;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
+  .login__login-form {
+    .card-body {
+      padding: 1rem;
+    }
+    .form-check-label {
+      font-weight: 400;
+    }
   }
 
-  .logo {
-    width: 22rem;
+  .login__logo {
+    padding: 0 2rem;
+    img {
+      max-width: 100%;
+      display: block;
+    }
   }
 
-  h1 {
-    color: #fff;
-    text-align: center;
-    margin: 2rem 0;
+  &.with-background {
+    background-image: url(https://source.unsplash.com/daily);
+    background-position: center;
+    background-size: cover;
+    h1 {
+      color: $white;
+      text-shadow: 0px 1px 1px var(--shade);
+    }
   }
+
 }
