--- a/assets/scss/layout/_login.scss
+++ b/assets/scss/layout/_login.scss
@@ -3,49 +3,60 @@
     max-width: 25rem;
     margin: 0 auto;
     padding: 2rem 1rem;
+
     @include media-breakpoint-up(sm) {
       padding-top: 4rem;
     }
+
     @include media-breakpoint-up(md) {
       padding-top: 5rem;
     }
+
     @include media-breakpoint-up(lg) {
       padding-top: 7rem;
     }
   }
+
   h1 {
     text-align: center;
     margin: 2rem 0;
     font-size: 1.25rem;
   }
+
   body {
     background: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .login__login-form {
     .card-body {
       padding: 1rem;
     }
+
     .form-check-label {
       font-weight: 400;
     }
   }
+
   .login__logo {
     padding: 0 2rem;
+
     img {
       max-width: 100%;
       display: block;
     }
   }
+
   &.with-background {
     background-image: url(https://source.unsplash.com/daily);
     background-position: center;
     background-size: cover;
+
     h1 {
       color: $white;
-      text-shadow: 0px 1px 1px var(--shade);
+      text-shadow: 0 1px 1px var(--shade);
     }
   }
 }
