Split up fields in record stats sidebar to editable and summary, rearrange, add logic to value only for fields

--- a/templates/_partials/fields/date.html.twig
+++ b/templates/_partials/fields/date.html.twig
@@ -17,7 +17,12 @@
   {% if mode is not defined %}
       {% set mode = define.mode|default(false) %}
   {% endif %}
+  {# check if we only want the value: valueonly #}
+  {% if valueonly is not defined %}
+      {% set valueonly = false %}
+  {% endif %}
 
+  {% if not valueonly %}
   <editor-date
     :value='{{ value|json_encode }}'
     name='{{ name }}'
@@ -27,6 +32,13 @@
     locale='{{user.locale}}'
     labels='{{ { 'toggle': 'editor_date.toggle'|trans }|json_encode }}'
   ></editor-date>
+  {% else %}
+    <span
+        :id='{{ id|json_encode }}'
+        :name='{{ name|json_encode }}'
+        class=""
+    >{{ value|date(format='F d, Y - g:ia')}}</span>
+  {% endif %}
   
 {% endblock %}
 
