--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -45,7 +45,7 @@
     <listing-select-box
       plural="{{ contentType.name }}"
       singular="{{ contentType.singular_name }}"
-      labels="{{
+      :labels="{{
         { 'card_header':
             {   'selected': 'listing_select_box.card_header.selected'|trans   },
           'card_body':
