--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -9,7 +9,7 @@
    - type: P - The type of the field
    - variant: F - the "variant" of the field, if applicable
    - name: P+F - The `name` attribute of the <input> field
-   - id: P+F - The `id` attribut of the <input> field
+   - id: P+F - The `id` attribute of the <input> field
    - class: P+F - The `class` attribute of the <input> field
    - form: P - The `form` attribute of the <input>, defaults to 'editcontent'
    - value: P+F - The default value if the <input> field
@@ -33,7 +33,7 @@
 
 {# Set the id #}
 {% if not id|default %}
-    {% set id = 'field-' ~ field.name|default('unnamed') %}
+    {% set id = 'field-' ~ field.name|default(name)|default('unnamed') %}
 {% endif %}
 
 {# Set the form #}
