--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -68,15 +68,21 @@
     <div id="metadata">
         <form class="ui form">
 
-            {% include '@bolt/content/_localeswitcher.html.twig' %}
-
             <div class="card mb-3">
-              <div class="card-body">
+                <div class="card-header">
+                    {{ 'title.save_changes'|trans }}
+                </div>
+                <div class="card-body">
                   {% include '@bolt/content/_buttons.html.twig' %}
-              </div>
+                </div>
             </div>
 
+            {% include '@bolt/content/_localeswitcher.html.twig' %}
+
             <div class="card">
+                <div class="card-header">
+                    {{ 'title.options'|trans }}
+                </div>
                 <div class="card-body">
                     {% include '@bolt/content/_fields_aside.html.twig' %}
                     {% include '@bolt/content/_fields_aside_summary.html.twig' %}
