Make sure Select fields are saved properly

--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -21,6 +21,7 @@
 {% endif %}
 
 {% block field %}
+    {% dump(options) %}
     <editor-select
         :value="{{ value|json_encode }}"
         :name='{{ name|json_encode }}'
