--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -29,8 +29,8 @@
         {% for name, field in record.fields %}
             <tr>
                 <td>
-                    <b>{{ field.definition.label|default(field.name) }}</b><br>
-                    Type: {{ field.definition.type }}<br>
+                    <b>{{ field|label }}</b><br>
+                    Type: {{ field|type }}<br>
                 </td>
                 {% set localizedValues = find_translations(field) %}
                 {% for locale in locales %}
