--- a/templates/helpers/_field_blocks.twig
+++ b/templates/helpers/_field_blocks.twig
@@ -1,11 +1,11 @@
 {# Sub-block for 'text' field such as 'text', 'textarea', or 'html' #}
 {% block text_field %}
     <div data-bolt-field="{{ field.name }}">
-        <{{tag}}>
+        <{{ tag }}>
         {%- autoescape false -%}
             {{ field.twigValue() }}
         {%- endautoescape -%}
-        </{{tag}}>
+        </{{ tag }}>
     </div>
 {% endblock %}
 
@@ -65,14 +65,14 @@
 
     {# Special case for 'select' fields: if it's a multiple select, the field is an array. #}
     {% if type == "select" and field is not empty %}
-        <p><strong>{{ field.definition.label|default(field.name) }}: </strong>
+        <p><strong>{{ field|label }}: </strong>
             {{ dump(field) }}
         </p>
     {% endif %}
 
     {# Checkbox fields #}
     {% if type == "checkbox" %}
-        <p><strong>{{ field.definition.label|default(field.name) }}</strong>: {{ field ? "checked" : "not checked" }}</p>
+        <p><strong>{{ field|label }}</strong>: {{ field ? "checked" : "not checked" }}</p>
     {% endif %}
 
     {# Imagelist fields #}
@@ -83,7 +83,7 @@
     {# No special case defined for this type of field. We just output them, if it's
        a simple scalar, and 'dump' them otherwise. #}
     {% if type in [ 'filelist', 'datetime', 'date', 'integer', 'float' ] and field is not empty  %}
-        <p><strong>{{ field.definition.label|default(field.name) }}: </strong>
+        <p><strong>{{ field|label }}: </strong>
             {% if field is iterable %}
                 {{ dump(field) }}
             {% else %}
