--- a/public/theme/skeleton/partials/_sub_field_blocks.twig
+++ b/public/theme/skeleton/partials/_sub_field_blocks.twig
@@ -65,7 +65,28 @@
     {% if type == "select" and field is not empty %}
 
         <p><strong>{{ field|label }}: </strong>
-            {{ dump(field) }}
+
+            {% if field.contentselect() %}
+                {# this field is being used as a field to select other Content #}
+
+                {% set selectedRecords = field|selected(returnarray = true) %}
+
+                <ul>
+                    {% for record in selectedRecords %}
+                        <li><a href="{{ record|link }}">{{ record|title }}</a></li>
+                    {% endfor %}
+                </ul>
+
+            {% else %}
+
+                <ul>
+                    {% for value in field.value %}
+                        <li>{{ value }}</li>
+                    {% endfor %}
+                </ul>
+
+            {% endif %}
+
         </p>
     {% endif %}
 
