--- a/templates/content/_localeswitcher.html.twig
+++ b/templates/content/_localeswitcher.html.twig
@@ -11,7 +11,7 @@
             <general-language
                     label="{{ 'field.switch_to_locale'|trans }}"
                     current="{{ currentlocale }}"
-                    :locales="{{ locales() }}"
+                    :locales="{{ locales(locales) }}"
             ></general-language>
 
             {{ macro.buttonlink('localeswitcher.button_info', path('bolt_content_edit_locales', {'id': record.id}),  'language', 'tertiary') }}
