--- a/public/theme/skeleton/partials/_sub_field_blocks.twig
+++ b/public/theme/skeleton/partials/_sub_field_blocks.twig
@@ -74,6 +74,8 @@
                 <ul>
                     {% for record in selectedRecords %}
                         <li><a href="{{ record|link }}">{{ record|title }}</a></li>
+                    {% else %}
+                        <li><em>(nothing selected)</em></li>
                     {% endfor %}
                 </ul>
 
