--- a/templates/users/listing.html.twig
+++ b/templates/users/listing.html.twig
@@ -33,7 +33,7 @@
             <td>{{ iteratedUser.username }}</td>
             <td>{{ iteratedUser.email }}</td>
             <td><code>{{ iteratedUser.roles|join('</code>, <code>') }}</code></td>
-            <td>{{ iteratedUser.lastseenAt|default('-') }}</td>
+            <td>{{ iteratedUser.lastseenAt|date('Y-m-d H:i:s')|default('-') }}</td>
             <td>{{ iteratedUser.lastIp|default('12.34.56.78') }}</td>
             <td>
                 {{ macro.buttonlink('action.edit', path('bolt_user_edit', {'id': iteratedUser.id}), 'edit', 'secondary') }}
@@ -53,6 +53,35 @@
     <p class="buttons">
         {{ macro.buttonlink('action.add_user', path('bolt_user_edit', {'id': 0}), 'user-plus', 'secondary') }}
     </p>
+
+    <h3>Current sessions</h3>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col" class="text-nowrap">{{ 'listing.title_username'|trans }}</th>
+                <th scope="col" class="text-nowrap">{{ 'listing.title_last_seen'|trans }}</th>
+                <th scope="col" class="text-nowrap">{{ 'listing.title_session_expires'|trans }}</th>
+                <th scope="col" class="text-nowrap">{{ 'listing.title_ip_address'|trans }}</th>
+                <th scope="col" class="text-nowrap">{{ 'listing.title_browser'|trans }}</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for iteratedUser in users %}
+                {% if iteratedUser.getUserAuthToken %}
+                    {% set authtoken = iteratedUser.getUserAuthToken %}
+                    <tr>
+                        <td class="text-nowrap">{{ iteratedUser.id }}</td>
+                        <td class="text-nowrap">{{ iteratedUser.username }}</td>
+                        <td class="text-nowrap">{{ iteratedUser.lastseenAt|date('Y-m-d H:i:s')|default('-') }}</td>
+                        <td class="text-nowrap">{{ authtoken.validity|date('Y-m-d H:i:s')|default('-') }}</td>
+                        <td class="text-nowrap">{{ iteratedUser.lastIp|default('12.34.56.78') }}</td>
+                        <td>{{ authtoken.useragent|default('-') }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </tbody>
+    </table>
 
 {% endblock %}
 
