--- a/templates/users/listing.html.twig
+++ b/templates/users/listing.html.twig
@@ -33,7 +33,7 @@
             <td>{{ iteratedUser.username }}</td>
             <td>{{ iteratedUser.email }}</td>
             <td><code>{{ iteratedUser.roles|join('</code>, <code>') }}</code></td>
-            <td>{{ iteratedUser.lastseenAt|date('Y-m-d H:i:s')|default('-') }}</td>
+            <td class="datetime-relative">{{ iteratedUser.lastseenAt|date("c")|default('-') }}</td>
             <td>{{ iteratedUser.lastIp|default('12.34.56.78') }}</td>
             <td>
                 {{ macro.buttonlink('action.edit', path('bolt_user_edit', {'id': iteratedUser.id}), 'edit', 'secondary') }}
@@ -73,8 +73,8 @@
                     <tr>
                         <td class="text-nowrap">{{ iteratedUser.id }}</td>
                         <td class="text-nowrap">{{ iteratedUser.username }}</td>
-                        <td class="text-nowrap">{{ iteratedUser.lastseenAt|date('Y-m-d H:i:s')|default('-') }}</td>
-                        <td class="text-nowrap">{{ authtoken.validity|date('Y-m-d H:i:s')|default('-') }}</td>
+                        <td class="text-nowrap datetime-relative">{{ iteratedUser.lastseenAt|date("c") }}</td>
+                        <td class="datetime-relative">{{ authtoken.validity|date("c") }}</td>
                         <td class="text-nowrap">{{ iteratedUser.lastIp|default('12.34.56.78') }}</td>
                         <td>{{ authtoken.useragent|default('-') }}</td>
                     </tr>
