--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -3,7 +3,7 @@
 {% block field %}
     {% set setPath = field.definition.get('upload')|default('') %}
     {% set directory = path('bolt_async_upload', {'location': location|default('files'), 'path': setPath}) %}
-    {% set filelist = path('bolt_async_filelisting', {'location': location|default('files') }) %}
+    {% set filelist = path('bolt_async_filelisting', {'location': location|default('files'), 'type': 'images' }) %}
     {% set labels = {
         'button_upload': 'image.button_upload'|trans,
         'button_from_library': 'image.button_from_library'|trans,
