--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -11,6 +11,7 @@
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
     }|json_encode %}
+    {% set extensions = field.definition.get('extensions')|default('') %}
     <editor-file
             :name='{{ name|json_encode }}'
             :filename='{{ field.get('filename')|json_encode }}'
@@ -22,5 +23,6 @@
             :filelist='{{ filelist|json_encode }}'
             :csrf-token='{{ csrf_token('upload')|json_encode }}'
             :labels='{{ labels }}'
+            :extensions='{{ extensions|json_encode }}'
     ></editor-file>
 {% endblock %}
