--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -1,10 +1,26 @@
 {% extends '@bolt/_partials/fields/_base.html.twig' %}
 
 {% block field %}
-    {% for image in value %}
-    <input class="form-control {{ class }}" name="{{ name }}" placeholder="…" type="text" value="{{ image }}"
-           {{ attributes|default()|raw }}>
-    {% endfor %}
-    <mark>{{ 'imagelist.remark'|trans|raw }}</mark>
+
+   {% set setPath = field.definition.get('upload')|default('') %}
+   {% set directory = path('bolt_async_upload', {'location': location|default('files'), 'path': setPath}) %}
+   {% set filelist = path('bolt_async_filelisting', {'location': location|default('files'), 'type': 'images' }) %}
+   {% set labels = {
+      'button_upload': 'image.button_upload'|trans,
+      'button_from_library': 'image.button_from_library'|trans,
+      'placeholder_filename': 'image.placeholder_filename'|trans,
+      'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
+      'placeholder_title': 'image.placeholder_title'|trans,
+      'button_remove': 'image.button_remove'|trans,
+   }|json_encode %}
+
+   <editor-imagelist
+           :images='{{ field.value|json_encode }}'
+           :name='{{ name|json_encode }}'
+           :directory='{{ directory|json_encode }}'
+           :filelist='{{ filelist|json_encode }}'
+           :csrf-token='{{ csrf_token('upload')|json_encode }}'
+           :labels='{{ labels }}'
+   ></editor-imagelist>
 
 {% endblock %}
