--- a/templates/content/_relationships.html.twig
+++ b/templates/content/_relationships.html.twig
@@ -4,7 +4,7 @@
     {% set options = related_options(contentType) %}
     {% set value = record|related_values(contentType) %}
 
-    <div class="form-group editor--group is-normal">
+    <div class="form-group is-normal">
         <label for="field-title">
             {{ relation.label }}:
         </label>
