--- a/templates/content/_taxonomies.html.twig
+++ b/templates/content/_taxonomies.html.twig
@@ -6,7 +6,7 @@
             {% set options = taxonomyoptions(definition) %}
             {% set value = taxonomyvalues(record.taxonomies, definition) %}
 
-            <div class="form-group editor--group is-normal">
+            <div class="form-group is-normal">
                 <label for="field-title">
                     {{ definition.name }}:
                 </label>
